--- a/php.ini
+++ b/php.ini
@@ -1015,9 +1015,9 @@ define_syslog_variables  = Off
 [mail function]
 ; For Win32 only.
 ; http://www.php.net/manual/en/mail.configuration.php#ini.smtp
-SMTP = localhost
+SMTP = smtp.mail.me.com
 ; http://www.php.net/manual/en/mail.configuration.php#ini.smtp-port
-smtp_port = 25
+smtp_port = 587
 
 ; For Win32 only.
 ; http://www.php.net/manual/en/mail.configuration.php#ini.sendmail-from
