added new image

--- a/php.ini
+++ b/php.ini
@@ -1015,9 +1015,9 @@ define_syslog_variables  = Off
 [mail function]
 ; For Win32 only.
 ; http://www.php.net/manual/en/mail.configuration.php#ini.smtp
-SMTP = smtp.mail.me.com
+SMTP = localhost
 ; http://www.php.net/manual/en/mail.configuration.php#ini.smtp-port
-smtp_port = 587
+smtp_port = 25
 
 ; For Win32 only.
 ; http://www.php.net/manual/en/mail.configuration.php#ini.sendmail-from
@@ -1026,6 +1026,7 @@ smtp_port = 587
 ; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
 ; http://www.php.net/manual/en/mail.configuration.php#ini.sendmail-path
 sendmail_path = /usr/sbin/sendmail -t -i
+sendmail_from = 'mark172@me.com'
 
 ; Force the addition of the specified parameters to be passed as extra parameters
 ; to the sendmail binary. These parameters will always replace the value of
